# robox.io

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  USAGE.md  extra.css  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml  tests.yml
codefreaker/: annotations.py  autoenum.py  checker.py  clone.py  config.py  conftest.py  console.py  create.py  edit.py  grading_utils.py  hydration.py  main.py  metadata.py  run.py  schema.py  submit.py  test.py  testcase.py  testcase_rendering.py  testing_utils.py  utils.py
codefreaker/box/: checkers.py  code.py  config.py  conftest.py  environment.py  generators.py  generators_test.py  latex.py  latex_jinja.py  main.py  package.py  schema.py  solutions.py  solutions_test.py  statement_builders.py  statement_schema.py  statements.py  stresses.py  testcases.py  validators.py  validators_test.py
codefreaker/grading/: cacher.py  caching.py  digester.py  sandbox.py  steps.py  storage.py  test.py
codefreaker/providers/: __init__.py  codeforces.py  provider.py
codefreaker/submitors/: __init__.py  codeforces.py  submitor.py
docs/: extra.css  index.md
docs/intro/: configuration.md  installation.md
docs/setters/: cheatsheet.md  first-steps.md
intro/configuration/: index.html
intro/installation/: index.html
rbx/: annotations.py  autoenum.py  checker.py  clone.py  config.py  conftest.py  create.py  edit.py  grading_utils.py  hydration.py  main.py  metadata.py  run.py  schema.py  submit.py  test.py  testcase.py  testcase_rendering.py  testing_utils.py  utils.py
rbx/box/: builder.py  cd.py  checkers.py  code.py  compile.py  conftest.py  creation.py  download.py  environment.py  extensions.py  generators.py  generators_test.py  main.py  package.py  schema.py  solutions.py  solutions_test.py  stresses.py  testcases.py  validators.py  validators_test.py
rbx/grading/: caching.py  conftest.py  steps.py  steps_with_caching.py  steps_with_caching_run_test.py
rbx/providers/: __init__.py  codeforces.py  provider.py
rbx/submitors/: __init__.py  codeforces.py  submitor.py
resources/: default_config.json
resources/checkers/: acmp.cpp  dcmp.cpp  nyesno.cpp  wcmp.cpp  yesno.cpp
resources/envs/: default.cfk.yml  default.rbx.yml  isolate.cfk.yml  isolate.rbx.yml
resources/templates/: template.cpp
robox/: annotations.py  checker.py  clone.py  config.py  conftest.py  console.py  create.py  edit.py  grading_utils.py  hydration.py  main.py  metadata.py  run.py  schema.py  submit.py  test.py  testcase.py  testing_utils.py  utils.py
robox/box/: builder.py  cd.py  checkers.py  code.py  compile.py  conftest.py  creation.py  download.py  environment.py  extensions.py  generators.py  generators_test.py  main.py  package.py  schema.py  solutions.py  solutions_test.py  stresses.py  testcases.py  validators.py  validators_test.py
robox/grading/: caching.py  conftest.py  steps.py  steps_with_caching.py  (+1 more)
search/: search_index.json
(+172 files in other folders)
