[tool.poetry]
name = "codefreaker"
version = "0.1.3"
description = ""
authors = ["Roberto Sales"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
fastapi = "^0.111.0"
filelock = "^3.14.0"
gevent = "^24.2.1"
mechanize = "^0.4.10"
jinja2 = "^3.1.4"
pydantic = "^2.7.3"
rich = "^13.7.1"
pyyaml = "^6.0.1"
requests = "^2.32.3"

[tool.poetry.scripts]
cfk = "codefreaker.main:app"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
