[tool.poetry]
name = "codefreaker"
version = "0.1.3"
description = ""
authors = ["Roberto Sales"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
fastapi = "^0.111.0"
filelock = "^3.14.0"
gevent = "^24.2.1"
mechanize = "^0.4.10"
jinja2 = "^3.1.4"
pydantic = "^2.7.3"
rich = "^13.7.1"
pyyaml = "^6.0.1"
requests = "^2.32.3"
pdflatex = "^0.1.3"
latexbuild = "^0.2.2"

[tool.poetry.scripts]
cfk = "codefreaker.main:app"
cbox = "codefreaker.box.main:app"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.10"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# On top of the defaults (`E4`, E7`, `E9`, and `F`), enable flake8-bugbear (`B`) and flake8-quotes (`Q`).
select = ["E4", "E7", "E9", "F", "B", "I", "TID", "SLF"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"